--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-sirius": "^0.1.12"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +34,8 @@
   "devDependencies": {
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.19.1"
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "redux-logger": "^3.0.6"
   }
 }
